fix: resolve layout problem

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -13,6 +13,18 @@
   gap: 20rem;
 }
 
+.navbar li {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.navbar ul p {
+  display: block;
+
+}
+
 .navbar-item {
   color: #fff;
   text-decoration: none;
