--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 /* src/index.css */
-body {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+body {
   font-family: 'Montserrat', sans-serif;
   font-size: 15px;
   background-color: #d8cee9;
