--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,41 +1,42 @@
-.container {
+.container-home {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
 }
 
-h2 {
+.container-home h2 {
   text-align: center;
   color: #007bff;
+  margin-bottom: 20px;
 }
 
-.menu {
+.container-home .menu {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
 }
 
-.menu-item {
+.container-home .menu-item {
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 20px;
   transition: transform 0.3s ease-in-out;
-}
 
-.menu-item:hover {
-  transform: scale(1.05);
-}
+  &:hover {
+    transform: scale(1.05);
+  }
 
-.menu-item h3 {
-  color: #007bff;
-}
+  .container-home h3 {
+    color: #007bff;
+  }
 
-.menu-item p {
-  margin-bottom: 10px;
-}
+  .container-home p {
+    margin-bottom: 10px;
+  }
 
-.menu-item p.price {
-  font-weight: bold;
-  color: #28a745;
+  .container-home p.price {
+    font-weight: bold;
+    color: #28a745;
+  }
 }
